Controller to Service layer call implemented
